# os-c

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  Youhelp me understand.txt  goodBoy.txt  pervert.txt
src/: lib.rs  main.rs
src/hal/: display.rs  memory.rs  mod.rs
src/kernel/: fs.rs  memory.rs  mod.rs  process.rs  syscalls.rs
src/userspace/: shell.rs
www/: index.html  index.js  server.py  styles.css
