[package]
name = "wasm-os"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly-based operating system that runs in the browser"
repository = "https://github.com/jmdots/wasm-os"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true

[features]
default = ["panic-hook"]
panic-hook = ["console_error_panic_hook"]